Getting a weird issue with the runServer task.