@@ -6,8 +6,8 @@ val versionNumberClient = "0.0.1"
 val versionNumberServer = "0.0.1"
 
 val runClientArgs = "-Xms256M -Xmx512M -XX:ParallelGCThreads=2 -client -XX:CompileThreshold=1000".split(" ")
-val runServerArgs = "-Xms1G -Xmx3G -XX:ParallelGCThreads=4 -XX:MaxPermSize=256m -XX:MaxMetaspaceSize=256m  -XX:+HeapDumpOnOutOfMemoryError -server -XX:CompileThreshold=10000 -Xlint:-deprecation".split(" ")
-val compileArgs = listOf("-Xlint:-deprecation")
+val runServerArgs = ""//"-Xms1G -Xmx3G -XX:ParallelGCThreads=4 -XX:MaxMetaspaceSize=512M  -XX:+HeapDumpOnOutOfMemoryError -server -XX:CompileThreshold=10000 -Xlint:-deprecation".split(" ")
+val compileArgs = listOf("-Werror")
 
 
 plugins {
@@ -22,6 +22,7 @@ repositories {
     mavenCentral()
 }
 
+// Java version 17
 java {
     sourceCompatibility = JavaVersion.VERSION_17
     targetCompatibility = JavaVersion.VERSION_17
@@ -31,59 +32,90 @@ tasks.withType<ProcessResources>{
     filteringCharset = "UTF-8"
 }
 
+sourceSets {
+    getByName("main") {
+        java {
+            srcDir("src/main/java")
+        }
+        kotlin {
+            srcDir("src/main/kotlin")
+        }
+    }
+}
+
+// Compile arguments for the JVM
 tasks.withType<JavaCompile> {
     options.encoding = "UTF-8"
     options.compilerArgs.addAll(compileArgs)
     options.release.set(17);
 }
 
-
-
+//Gradle tasks
 tasks {
+    // Builds the Client jar
     val client by creating(com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar::class) {
+        from(sourceSets["main"].output){
+            exclude("server/**")
+        }
         archiveBaseName.set(fileNameClient)
         archiveVersion.set(versionNumberClient)
-        archiveClassifier.set("client")
+        archiveClassifier.set("")
         manifest {
             attributes["Main-Class"] = mainClassNameClient
         }
         configurations = listOf(project.configurations.runtimeClasspath.get())
     }
 
+    // Should build the client jar and run it from the cli
     register("runClient", JavaExec::class) {
+        dependsOn(client)
         group = "Execution"
-        description = "Runs the client"
+        description = "Runs the client program"
         mainClass = mainClassNameClient
         classpath = sourceSets["main"].runtimeClasspath
         jvmArgs(runClientArgs)
-        dependsOn(client)
     }
 
+    // Builds the Server jar
     val server by creating(com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar::class) {
+        from(sourceSets["main"].output){
+            exclude("client/**")
+        }
         archiveBaseName.set(fileNameServer)
         archiveVersion.set(versionNumberServer)
-        archiveClassifier.set("server")
+        archiveClassifier.set("")
         manifest {
             attributes["Main-Class"] = mainClassNameServer
         }
-
         configurations = listOf(project.configurations.runtimeClasspath.get())
     }
 
+    // Should build the Server jar and run it from the cli
     register("runServer", JavaExec::class) {
+        dependsOn(server)
         group = "Execution"
-        description = "Runs the server"
+        description = "Runs the server program"
         mainClass = mainClassNameServer
         classpath = sourceSets["main"].runtimeClasspath
         jvmArgs(runServerArgs)
-        dependsOn(server)
     }
+
+    // Debugging task
+    register("Debug") {
+        doLast{
+            println(sourceSets["main"].runtimeClasspath.asPath)
+        }
+    }
+
+    // Disables ./gradlew build from producing its own jar
+    named("jar"){
+        enabled = false
+    }
+
+
 }
 
+// reroutes ./gradlew build to the server and client tasks
 tasks.build {
     dependsOn("server", "client")
 }
-
-
-
-
